add week 3 files and nottebook

--- a/steven-hugney/python_intro/cred_pay.ipynb
+++ b/steven-hugney/python_intro/cred_pay.ipynb
@@ -307,7 +307,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# next we are going to try out this new hand rest I got for my keyboard I just want to type with it to see how it feels\n",
+    "# I think it will be a good thing, and seems like it could be comfy, but right now it just feels a little awckward"
+   ]
   }
  ],
  "metadata": {
